# haberdasher

./: .gitignore  .gitmodules  Cargo.toml  LICENSE_MIT  rust-toolchain
actix/: Cargo.toml
actix-async-await/: Cargo.toml
actix-async-await/src/: handler.rs  lib.rs
actix/src/: actor.rs
actix/src/address/: message.rs
clacks_agentd/: Cargo.toml
clacks_agentd/src/: agent_connection.rs  jsonrpc_handler.rs  main.rs  tg_manager.rs
clacks_crypto/: Cargo.toml
clacks_crypto/src/: asymm.rs  lib.rs  symm.rs
clacks_mtproto/: Cargo.toml  build.rs
clacks_mtproto/src/: lib.rs  mtproto_prelude.rs
clacks_mtproto/tl/: 001-manual.tl
clacks_rpc/: Cargo.toml
clacks_rpc/src/: client.rs  kex.rs  lib.rs
clacks_tl_codegen/: Cargo.toml
clacks_tl_codegen/src/: lib.rs
clacks_transport/: Cargo.toml
clacks_transport/src/: lib.rs  session.rs
grpc-rs/: Cargo.toml
haberdasher_irc_agent/: Cargo.toml
haberdasher_irc_agent/src/: main.rs
haberdasher_matrix_agent/: package.json  tsconfig.json
haberdasher_matrix_agent/src/: client.ts  haberdasher_grpc_pb.d.ts  haberdasher_grpc_pb.js  haberdasher_pb.d.ts  haberdasher_pb.js
haberdasher_matrix_agent/src/@types/: matrix-js-sdk.d.ts
haberdasher_rpc/: Cargo.toml  build.rs  haberdasher.proto
haberdasher_rpc/src/: haberdasher.capnp  haberdasher.proto  haberdasher.rs  haberdasher_grpc.rs  lib.rs
haberdasher_telegram_agent/: Cargo.toml
haberdasher_telegram_agent/src/: backoff.rs  config.rs  console.rs  main.rs  publisher.rs  real_shutdown.rs  tg_manager.rs
haberdasherd/: Cargo.toml
haberdasherd/src/: main.rs
protos/: haberdasher.proto
