[package]
name = "clacks_crypto"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "crypto-related functionality for telegram/mtproto"

[dependencies]
byteorder = "1.3.1"
chrono = "0.4.6"
failure = "0.1.5"
openssl = "0.10.23"
rand = "0.6.5"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.100.0"
