[package]
name = "clacks_mtproto"
version = "0.100.0"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "minimal wrappers for telegram's mtproto serialization"

[dependencies]
byteorder = "1.3.1"
erased-serde = "0.3.9"
extfmt = "0.1.1"
failure = "0.1.5"
flate2 = "1.0.7"
lazy_static = "1.3.0"
rand = "0.6.5"
serde = "1.0.92"
serde_derive = "1.0.92"

[build-dependencies]
failure = "0.1.5"

[build-dependencies.clacks_tl_codegen]
path = "../clacks_tl_codegen"
version = "0.0.5"
