[package]
name = "clacks_rpc"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "telegram's TCP transport encoding"
edition = "2018"

[dependencies]
byteorder = "1.3.1"
chrono = "0.4.6"
failure = "0.1.5"
rayon = "1.0.3"
slog = "2.4.1"
tokio-codec = "0.1.1"
tokio-io = "0.1.12"

[dependencies.futures-preview]
version = "=0.3.0-alpha.16"
features = ["compat"]

[dependencies.actix]
path = "../actix"
version = "0.8.3"

[dependencies.actix-async-await]
path = "../actix-async-await"
version = "0.4.0-alpha.0"

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.100.0"

[dependencies.clacks_transport]
path = "../clacks_transport"
version = "0.0.5"
