[package]
name = "clacks_transport"
version = "0.0.5"
authors = ["Aaron Gallagher <_@habnab.it>", "Connie Hilarides <connorcpu@live.com>"]
license = "MIT/Apache-2.0"
description = "telegram's TCP transport encoding"
edition = "2018"

[dependencies]
byteorder = "1.3.1"
bytes = "0.4.12"
chrono = "0.4.6"
either = "1.5.2"
failure = "0.1.5"
rand = "0.6.5"
serde = "1.0.92"
serde_derive = "1.0.92"
slog = "2.4.1"
tokio-codec = "0.1.1"

[dependencies.serde_json]
version = "1.0.39"
optional = true

[dependencies.slog-scope]
version = "4.1.1"
optional = true

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.100.0"

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"

[features]
default = []
protocol-tracing = [
    "serde_json",
    "slog/max_level_trace",
    "slog-scope",
]
