[package]
name = "haberdasher_irc_agent"
version = "0.1.0"
authors = ["Aaron Gallagher <_@habnab.it>"]
edition = "2018"

[dependencies]
haberdasher_rpc = { path = "../haberdasher_rpc" }
grpcio = "0.4.0"
futures = "0.1.25"
failure = "0.1.3"
chrono = "0.4.6"
toml = "0.4.8"
tokio = "0.1.21"

[dependencies.irc]
git = "https://github.com/aatxe/irc"
branch = "0.14"

[dependencies.serde]
version = "1.0.80"
features = ["derive"]
