[package]
name = "haberdasher_telegram_agent"
version = "0.0.1"
authors = ["Aaron Gallagher <_@habnab.it>"]
edition = "2018"

[dependencies]
haberdasher_rpc = { path = "../haberdasher_rpc" }
actix = "0.8.3"
byteorder = "1.3.1"
bytes = "0.4.12"
chrono = "0.4.6"
clap = "2.33.0"
delegate = "0.2.0"
failure = "0.1.5"
futures = "0.1.27"
futures-cpupool = "0.1.8"
lazy_static = "1.3.0"
rand = "0.6.5"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
sled = "0.24.1"
slog = "2.4.1"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-scope = "4.1.1"
slog-term = "2.4.0"
structopt = "0.2.17"
tokio = "0.1.21"
tokio-codec = "0.1.1"
tokio-io = "0.1.12"
tokio-uds = "0.2.5"
toml = "0.5.1"

[dependencies.grpcio]
version = "0.4.4"
features = ["openssl"]

[dependencies.clacks_mtproto]
path = "../clacks_mtproto"
version = "0.100.0"

[dependencies.clacks_crypto]
path = "../clacks_crypto"
version = "0.0.5"

[dependencies.clacks_transport]
path = "../clacks_transport"
version = "0.0.5"
features = ["protocol-tracing"]

[dependencies.clacks_rpc]
path = "../clacks_rpc"
version = "0.0.5"
