[package]
name = "haberdasherd"
version = "0.1.0"
authors = ["Aaron Gallagher <_@habnab.it>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
tokio = "0.1.11"
haberdasher_rpc = { path = "../haberdasher_rpc" }
grpcio = "0.4.0"
toml = "0.4.8"
failure = "0.1.3"
owning_ref = "0.4.0"

[dependencies.serde]
version = "1.0.80"
features = ["derive"]
