[package]
name = "haberdasherd"
version = "0.1.0"
authors = ["Aaron Gallagher <_@habnab.it>"]
edition = "2018"

[dependencies]
haberdasher_rpc = { path = "../haberdasher_rpc" }
futures = "0.1.27"
tokio = "0.1.21"
toml = "0.5.1"
failure = "0.1.5"
owning_ref = "0.4.0"

[dependencies.grpcio]
path = "../grpc-rs"
version = "0.5.0-alpha.1"
default-features = false
features = ["prost-codec", "openssl-vendored"]

[dependencies.serde]
version = "1.0.92"
features = ["derive"]
